--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,22 +4,24 @@
   "private": true,
   "proxy": "http://localhost:9001/v1/api/",
   "dependencies": {
+    "@babel/eslint-parser": "^7.19.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.9",
     "@mui/styled-engine-sc": "^5.10.3",
     "@mui/x-data-grid": "^5.17.7",
+    "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.38.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
+    "recharts": "^2.1.15",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
